--- a/drupal/sites/SBIR/themes/sbirtheme/scss/components/_navbar.scss
+++ b/drupal/sites/SBIR/themes/sbirtheme/scss/components/_navbar.scss
@@ -27,7 +27,7 @@
         padding: 13px 19px;
       }
       #block-superfish-1 li.sf-depth-1.first>a {
-        margin-left:5px;
+        /*margin-left:5px;*/
       }
       #block-superfish-1 li.sf-depth-1>ul {
         top:52px;
